--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "resend": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
